[package]
name = "json_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tokio = {version = "*", features = ["full"]}

